<resources>
    <string name="app_name">TNAPI20Tester</string>
    <string name="main_activity_notice">Taboola API 2.0 Example (newline)\n\nTaboola recommends using the SDK when\nintegrating into mobile apps</string>
    <string name="main_activity_btn_widget_example">Widget(1x4) Widget Example</string>
    <string name="main_activity_btn_article_widget_example">Mid Article Widget + Below Article Widget</string>
    <string name="main_activity_btn_multiple_request">Multiple Requests on the same activity</string>
    <string name="main_activity_taboola_link">https://developers.taboola.com</string>
    <string name="lorem_ipsum_title">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
    </string>
    <string name="lorem_ipsum_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eros elit, iaculis eu quam a, malesuada ultrices ex. Quisque imperdiet pulvinar risus, sit amet tincidunt dui facilisis et. Ut volutpat odio a nulla aliquet, quis lobortis dolor hendrerit. Aliquam mollis orci vitae risus cursus mollis. Praesent auctor leo quis accumsan ullamcorper. Sed maximus justo non dui venenatis varius. In in fermentum elit. Ut rutrum mi et leo volutpat imperdiet. Pellentesque nec commodo felis, vitae eleifend eros.
    </string>
    <string name="lorem_ipsum_article">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla maximus nibh quis ipsum feugiat vulputate vitae et felis. In fringilla, urna eu dignissim volutpat, sem felis hendrerit libero, nec condimentum mi neque iaculis tortor. Praesent eu justo sem. Ut nec congue lorem. Nam feugiat ipsum sapien, ac posuere neque efficitur sit amet. Sed nunc tellus, tempus cursus leo quis, varius porta libero. Donec elementum quis quam id tincidunt.
        \n\nPellentesque leo felis, porta nec tempus scelerisque, eleifend ut elit. Nunc sagittis pulvinar neque a hendrerit. Mauris hendrerit nisl non nisl efficitur tincidunt. Curabitur luctus eros ac maximus mollis. Maecenas ut rutrum lacus, sed consectetur leo. Pellentesque ultricies, nibh ut scelerisque dignissim, est dolor condimentum nisl, vitae dictum magna urna at elit. Maecenas a cursus ligula. Morbi ultrices sapien eleifend congue sodales. Etiam blandit enim dolor. Nulla mattis facilisis orci, at tincidunt arcu cursus quis.
        \n\nPhasellus tristique in mi eget interdum. Nullam eleifend turpis non nisi placerat sagittis. Phasellus nec porta est. Ut condimentum ullamcorper massa et lacinia. In in tortor leo. In hac habitasse platea dictumst. Phasellus in rhoncus dui, quis efficitur nisi. Nulla nulla dolor, tempor sed ipsum non, consectetur tempor dolor. Maecenas vel urna sed magna tincidunt fringilla nec a nisl. Proin cursus tortor vel efficitur ornare. Vivamus faucibus justo ac lobortis tristique. Nulla scelerisque neque nec diam lobortis elementum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent semper massa at est facilisis, ac commodo eros vehicula.
        \n\nNam eget sagittis elit. Suspendisse et velit ex. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquam blandit iaculis. Aliquam tempus gravida maximus. Mauris diam elit, ornare et consectetur sed, tempor sit amet sem. Vivamus nisl massa, rhoncus sed laoreet nec, congue ut mi. Morbi in arcu laoreet urna viverra venenatis. Etiam egestas luctus feugiat. Praesent auctor quis libero eu ultrices.
        \n\nSuspendisse urna tortor, tempus sit amet elit in, posuere porttitor dui. Sed sollicitudin convallis odio, sit amet ornare justo feugiat sit amet. Integer eu scelerisque enim, tempus sagittis massa. Proin vel metus id augue sollicitudin suscipit. Nulla ultrices, nisl in ornare sollicitudin, sapien nunc consectetur dui, eu lobortis nisi ipsum non nunc. Quisque et massa urna. Sed quam purus, pretium ac ex nec, tempor placerat mauris.
    \n\nPellentesque leo felis, porta nec tempus scelerisque, eleifend ut elit. Nunc sagittis pulvinar neque a hendrerit. Mauris hendrerit nisl non nisl efficitur tincidunt. Curabitur luctus eros ac maximus mollis. Maecenas ut rutrum lacus, sed consectetur leo. Pellentesque ultricies, nibh ut scelerisque dignissim, est dolor condimentum nisl, vitae dictum magna urna at elit. Maecenas a cursus ligula. Morbi ultrices sapien eleifend congue sodales. Etiam blandit enim dolor. Nulla mattis facilisis orci, at tincidunt arcu cursus quis.
        \n\nPhasellus tristique in mi eget interdum. Nullam eleifend turpis non nisi placerat sagittis. Phasellus nec porta est. Ut condimentum ullamcorper massa et lacinia. In in tortor leo. In hac habitasse platea dictumst. Phasellus in rhoncus dui, quis efficitur nisi. Nulla nulla dolor, tempor sed ipsum non, consectetur tempor dolor. Maecenas vel urna sed magna tincidunt fringilla nec a nisl. Proin cursus tortor vel efficitur ornare. Vivamus faucibus justo ac lobortis tristique. Nulla scelerisque neque nec diam lobortis elementum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent semper massa at est facilisis, ac commodo eros vehicula.
        \n\nNam eget sagittis elit. Suspendisse et velit ex. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquam blandit iaculis. Aliquam tempus gravida maximus. Mauris diam elit, ornare et consectetur sed, tempor sit amet sem. Vivamus nisl massa, rhoncus sed laoreet nec, congue ut mi. Morbi in arcu laoreet urna viverra venenatis. Etiam egestas luctus feugiat. Praesent auctor quis libero eu ultrices.
    </string>
</resources>