<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TNTesterMainActivity">

    <ImageView
        android:id="@+id/taboola-logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:src="@mipmap/taboola_logo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:text="@string/main_activity_notice"/>
    <Button
        android:id="@+id/btn_wdg_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_btn_widget_example"
        android:layout_marginTop="40dp"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:minHeight="30dp"/>
    <Button
        android:id="@+id/btn_artical_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:text="@string/main_activity_btn_article_widget_example"
        android:minHeight="30dp"/>
    <Button
        android:id="@+id/btn_multi_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:text="@string/main_activity_btn_multiple_request"
        android:minHeight="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:textSize="18sp"
            android:autoLink="web"
            android:text="@string/main_activity_taboola_link"/>
    </LinearLayout>

</LinearLayout>