<?xml version="1.0" encoding="utf-8"?>
<com.taboola.tn.api20tester.widget.MyScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tn_multi_request_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/tn_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/lorem_ipsum_title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:text="@string/lorem_ipsum_description"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:text="@string/lorem_ipsum_article"/>

    </LinearLayout>




</com.taboola.tn.api20tester.widget.MyScrollView>