<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/lorem_ipsum_title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:text="@string/lorem_ipsum_description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:text="@string/lorem_ipsum_article"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp">
            <ProgressBar
                android:id="@+id/loading_tn_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                style="?android:attr/progressBarStyle"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/request_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="Error!\nClick to Try Again"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/tn_items"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </android.support.v7.widget.RecyclerView>
        </FrameLayout>

    </LinearLayout>

</ScrollView>