<?xml version="1.0" encoding="utf-8"?>
<com.taboola.tn.api20tester.widget.MyScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tn_article_demo_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/lorem_ipsum_title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:text="@string/lorem_ipsum_description"/>
        <com.taboola.tn.api20tester.widget.TNItemView
            android:id="@+id/tn_item_in_mid_article"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:text="@string/lorem_ipsum_article"/>
        <com.taboola.tn.api20tester.widget.TNItemView
            android:id="@+id/tn_item_in_bottom_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.taboola.tn.api20tester.widget.TNItemView
            android:id="@+id/tn_item_in_bottom_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.taboola.tn.api20tester.widget.TNItemView
            android:id="@+id/tn_item_in_bottom_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.taboola.tn.api20tester.widget.TNItemView
            android:id="@+id/tn_item_in_bottom_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</com.taboola.tn.api20tester.widget.MyScrollView>